package com.grupo4.trabajo.Enumerados;

public enum EnumResiduo {
    POLVO,BARRO
}
