package com.grupo4.trabajo.Pedido;

public enum TipoReparacion {
    GAS,ELECTRICIDAD
}
