package com.grupo4.trabajo.Robots;

public class S031RTY extends Robot{
    public S031RTY(){
        setSuperficie(null);
        setPuedeOrdenar(true);
        setPuedeLustrar(false);
        setCosto(2700f);
    }

    @Override
    public String toString() {
        return "S031RTY";
    }
}
