package com.grupo4.trabajo.Robots;

public enum Superficie {
    PISOS,MUEBLES,PISOSYMUEBLES
}
