package com.grupo4.trabajo.Robots;

public enum SuperficieEnum {
    PISOS,MUEBLES,PISOSYMUEBLES
}
